--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
     <title>Lexie Sappington's personal website</title>
 </head>
 <body>
-    <h1>Hi</h1>
+    <header>
+        <img src="images/githubimage.jpeg" alt="Lexie's image" height="100px">
+    </header>
+    <main>
+        <h1>Welcome to my website!</h1>
+        <h2>LexSap.github.io</h2>
+        <h3>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda nesciunt cupiditate dolorum, iusto distinctio asperiores cumque. Est quibusdam facere necessitatibus a porro sint, sed dolor accusantium incidunt facilis temporibus perferendis, quo sapiente consequatur, ipsum blanditiis expedita excepturi! Quia animi, totam, delectus quam sint possimus ipsa optio quos laborum blanditiis tempora!</h3>
+        <nav>
+            <ul>
+                <li>Education</li>
+                <li>Work Experience</li>
+                <li>Knowledge and Skills</li>
+                <li>Certifications</li>
+                <li><a href="#">Class Projects</a></li>
+            </ul>
+        </nav>
+    </main>
+
+
 </body>
 </html>
