--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img src="images/githubimage.jpeg" alt="Lexie's image" height="100px">
+        <img src="images/githubimage.jpeg" alt="Lexie's image" height="200px">
     </header>
     <main>
         <h1>Welcome to my website!</h1>
@@ -24,7 +24,15 @@
                 <li><a href="#">Class Projects</a></li>
             </ul>
         </nav>
+        <p>Click here for <a href="files/1_PythonIntroduction(1).pptx">my resume</a></p>
+        <p>Click here for <a href="https://www.linkdein.com">LinkedIn</a></p>
+        <p>Contact me at <em><a href="mailto:lrs070@shsu.edu">Lexie</a></em> for any inquiriers.</p>
+        <br>
+        <hr>
     </main>
+    <footer>
+        <p>&copy; Copyright 2024 Lexie Sappington</p>
+    </footer>
 
 
 </body>
