--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </ul>
         </nav>
         <p>Click here for <a href="files/1_PythonIntroduction(1).pptx">my resume</a></p>
-        <p>Click here for <a href="https://www.linkdein.com">LinkedIn</a></p>
+        <p>Click here for <a href="https://www.linkedin.com/in/lexie-sappington-656351306/">LinkedIn</a></p>
         <p>Contact me at <em><a href="mailto:lrs070@shsu.edu">Lexie</a></em> for any inquiriers.</p>
         <br>
         <hr>
