--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
         <h1>Welcome to my website!</h1>
         <h2>LexSap.github.io</h2>
-        <h3>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Assumenda nesciunt cupiditate dolorum, iusto distinctio asperiores cumque. Est quibusdam facere necessitatibus a porro sint, sed dolor accusantium incidunt facilis temporibus perferendis, quo sapiente consequatur, ipsum blanditiis expedita excepturi! Quia animi, totam, delectus quam sint possimus ipsa optio quos laborum blanditiis tempora!</h3>
+        <h3>Hello! My name is Lexie Sappington. I grew up in south Texas and I am attending Sam Houston State University and I plan on graduating in 2025.</h3>
         <nav>
             <ul>
                 <li>Education</li>
@@ -25,7 +25,7 @@
             </ul>
         </nav>
         <p>Click here for <a href="files/1_PythonIntroduction(1).pptx">my resume</a></p>
-        <p>Click here for <a href="https://www.linkedin.com/in/lexie-sappington-656351306/">LinkedIn</a></p>
+        <p>Click here for <a href="https://www.linkedin.com/in/lexie-sappington-656351306/">my LinkedIn</a></p>
         <p>Contact me at <em><a href="mailto:lrs070@shsu.edu">Lexie</a></em> for any inquiriers.</p>
         <br>
         <hr>
