--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img src="images/profilepicimage.png" alt="Lexie's image" height="300px">
+        <img src="images/profilepicimage.png" alt="Lexie's image" width="200" height="100">
     </header>
     <main>
         <h1>Welcome to my website!</h1>
