--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img src="images/profilepicimage.png" alt="Lexie's image" width="200" height="200">
+        <img src="images/profilepicimage.png" alt="Lexie's image" width="150" height="200">
     </header>
     <main>
         <h1>Welcome to my website!</h1>
@@ -26,7 +26,7 @@
         </nav>
         <p>Click here for <a href="files/1_PythonIntroduction(1).pptx">my resume</a></p>
         <p>Click here for <a href="https://www.linkedin.com/in/lexie-sappington-656351306/">my LinkedIn</a></p>
-        <p>Contact me at <em><a href="mailto:lrs070@shsu.edu">Lexie Sappington</a></em> for any inquiriers.</p>
+        <p>Contact me at <em><a href="mailto:lrs070@shsu.edu">Lexie Sappington</a></em> for any inquiries.</p>
         <br>
         <hr>
     </main>
