--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li><a href="#">Class Projects</a></li>
             </ul>
         </nav>
-        <p>Click here for <a href="files/Sappington_L Resume.docx">my resume</a></p>
+        <p>Click here for <a href="files/Sappington_L_Resume.docx">my resume</a></p>
         <p>Click here for <a href="https://www.linkedin.com/in/lexie-sappington-656351306/" target="_blank">my LinkedIn</a></p>
         <p>Contact me at <em><a href="mailto:lrs070@shsu.edu">Lexie Sappington</a></em> for any inquiries.</p>
         <br>
