--- a/index.html
+++ b/index.html
@@ -6,17 +6,18 @@
     <meta name="description" content="Lexie Sappington's personal website">
     <meta name="keywords" content="lexie, sappington, shsu, mis, student">
     <title>Lexie Sappington's personal website</title>
+    <link rel="stylesheet" href="styles/main1.css">
 </head>
 <body>
     <header>
         <img src="images/profilepicimage.png" alt="Lexie's image" width="150" height="200">
     </header>
     <main>
-        <h1>Welcome to my website!</h1>
-        <h2>LexSap.github.io</h2>
+        <h1 class="shadow"></h1>Welcome to my website!</h1>
+        <h2 class="shadow">LexSap.github.io</h2>
         <h3>Hello! My name is Lexie Sappington. I grew up in south Texas and I am attending Sam Houston State University and I plan on graduating in 2025.</h3>
         <nav>
-            <ul>
+            <ul id="list">
                 <li>Education</li>
                 <li>Work Experience</li>
                 <li>Knowledge and Skills</li>
@@ -30,7 +31,7 @@
         <br>
         <hr>
     </main>
-    <footer>
+    <footer class="copyright">
         <p>&copy; Copyright 2024 Lexie Sappington</p>
     </footer>
 
