--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <img src="images/profilepicimage.png" alt="Lexie's image" width="150" height="200">
-        <h1 class="shadow"></h1>Welcome to my website!</h1>
+        <h1 class="shadow">Welcome to my website!</h1>
         <h2 class="shadow">LexSap.github.io</h2>
     </header>
     <main>
