--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
                 <li><a href="#">Class Projects</a></li>
             </ul>
         </nav>
-        <p>Click here for <a href="files/Sappington_L_Resume.docx">my resume</a></p>
-        <p>Click here for <a href="https://www.linkedin.com/in/lexie-sappington-656351306/" target="_blank">my LinkedIn</a></p>
-        <p>Contact me at <em><a href="mailto:lrs070@shsu.edu">lrs070@shsu.edu</a></em> for any inquiries.</p>
+        <div class="contact"></div>
+            <p>Click here for <a href="files/Sappington_L_Resume.docx">my resume</a></p>
+            <p>Click here for <a href="https://www.linkedin.com/in/lexie-sappington-656351306/" target="_blank">my LinkedIn</a></p>
+            <p>Contact me at <em><a href="mailto:lrs070@shsu.edu">lrs070@shsu.edu</a></em> for any inquiries.</p>
+        </div>
         <br>
         <hr>
     </main>
