--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li><a href="#">Class Projects</a></li>
             </ul>
         </nav>
-        <div class="contact"></div>
+        <div class="contact">
             <p>Click here for <a href="files/Sappington_L_Resume.docx">my resume</a></p>
             <p>Click here for <a href="https://www.linkedin.com/in/lexie-sappington-656351306/" target="_blank">my LinkedIn</a></p>
             <p>Contact me at <em><a href="mailto:lrs070@shsu.edu">lrs070@shsu.edu</a></em> for any inquiries.</p>
@@ -35,8 +35,8 @@
         <br>
         <hr>
     </main>
-    <footer class="copyright">
-        <p>&copy; Copyright 2024 Lexie Sappington</p>
+    <footer>
+        <p class="copyright">&copy; Copyright 2024 Lexie Sappington</p>
     </footer>
 
 
