--- a/project.html
+++ b/project.html
@@ -33,6 +33,6 @@
     <footer>
         <p>&copy; Lexie Sappington
     </footer>
-    <p class="fixed">Contact me at lrs070@shsu.edu</p>
+    <p class="fixed">&copy> Contact me at lrs070@shsu.edu</p>
 </body>
 </html>
