--- a/project.html
+++ b/project.html
@@ -24,8 +24,8 @@
         <h4>References</h4>
         <ol>
             <li><a ref="https://www.w3schools.com/">W3schools</a></li>
-            <li><a ref="https://www.mozilla.org/en-US/?v=2"></a>Mozilla</li>
-            <li><a href="https://www.microsoft.com/en-us/microsoft-365/free-office-online-for-the-web?msockid=21a39de671ef60a5207388ed701e6135"></a>Microsoft</li>
+            <li><a ref="https://www.mozilla.org/en-US/?v=1"></a>Mozilla</li>
+            <li><a href="https://www.microsoft.com/en-us/?msockid=13d2182d628d601819d80d20632c6172"></a>Microsoft</li>
 
         </ol>
         <a ref="index.html">Return to Home page</a>
