--- a/project.html
+++ b/project.html
@@ -28,7 +28,7 @@
             <li><a href="https://www.microsoft.com/en-us/?msockid=13d2182d628d601819d80d20632c6172"></a>Microsoft</li>
 
         </ol>
-        <a ref="index.html">Return to Home page</a>
+        <a ref="lexsap.github.io">Return to Home page</a>
     </aside>
     <footer>
         <p>&copy; Lexie Sappington
