--- a/project.html
+++ b/project.html
@@ -24,8 +24,8 @@
         <h4>References</h4>
         <ol>
             <li><a ref="https://www.w3schools.com/">W3schools</a></li>
-            <li><a ref="https://www.mozilla.org/en-US/?v=1"></a>Mozilla</li>
-            <li><a href="https://www.microsoft.com/en-us/?msockid=13d2182d628d601819d80d20632c6172"></a>Microsoft</li>
+            <li><a ref="https://www.mozilla.org"></a>Mozilla</li>
+            <li><a href="https://www.microsoft.com"></a>Microsoft</li>
 
         </ol>
         <a ref="lexsap.github.io">Return to Home page</a>
