--- a/project.html
+++ b/project.html
@@ -24,11 +24,11 @@
         <h4>References</h4>
         <ol>
             <li><a ref="https://www.w3schools.com/">W3schools</a></li>
-            <li><a ref="https://www.mozilla.org"></a>Mozilla</li>
-            <li><a href="https://www.microsoft.com"></a>Microsoft</li>
+            <li><a ref="https://www.mozilla.org/"></a>Mozilla</li>
+            <li><a href="https://www.microsoft.com/"></a>Microsoft</li>
 
         </ol>
-        <a ref="lexsap.github.io">Return to Home page</a>
+        <a ref="index.html">Return to Home page</a>
     </aside>
     <footer>
         <p>&copy; Lexie Sappington
