--- a/project.html
+++ b/project.html
@@ -31,8 +31,7 @@
         <a ref="index.html">Return to Home page</a>
     </aside>
     <footer>
-        <p>&copy; Lexie Sappington</p>
-        <p class="fixed">&copy; Contact me at lrs070@shsu.edu</p>
+        <p class="fixed">&copy; Lexie Sappington</p>
     </footer>
 </body>
 </html>
