--- a/project.html
+++ b/project.html
@@ -31,7 +31,8 @@
         <a ref="index.html">Return to Home page</a>
     </aside>
     <footer>
-        <p class="fixed">&copy; Lexie Sappington</p>
+        <p class="copyright">&copy; Lexie Sappington</p>
     </footer>
+    <p class="fixed">&copy; Contact me at lrs070@shsu.edu</p>
 </body>
 </html>
