--- a/project.html
+++ b/project.html
@@ -23,8 +23,8 @@
     <aside>
         <h4>References</h4>
         <ol>
-            <li><a ref="https://www.w3schools.com/">W3schools</a></li>
-            <li><a ref="https://www.mozilla.org/"></a>Mozilla</li>
+            <li><a href="https://www.w3schools.com/">W3schools</a></li>
+            <li><a href="https://www.mozilla.org/"></a>Mozilla</li>
             <li><a href="https://www.microsoft.com/"></a>Microsoft</li>
 
         </ol>
