--- a/project.html
+++ b/project.html
@@ -24,8 +24,8 @@
         <h4>References</h4>
         <ol>
             <li><a href="https://www.w3schools.com/">W3schools</a></li>
-            <li><a href="https://www.mozilla.org/"></a>Mozilla</li>
-            <li><a href="https://www.microsoft.com/"></a>Microsoft</li>
+            <li><a href="https://www.mozilla.org/">Mozilla</a></li>
+            <li><a href="https://www.microsoft.com/">Microsoft</a></li>
 
         </ol>
         <a ref="index.html">Return to Home page</a>
