--- a/project.html
+++ b/project.html
@@ -28,7 +28,7 @@
             <li><a href="https://www.microsoft.com/">Microsoft</a></li>
 
         </ol>
-        <a ref="index.html">Return to Home page</a>
+        <a href="index.html">Return to Home page</a>
     </aside>
     <footer>
         <p class="copyright">&copy; Lexie Sappington</p>
