--- a/project.html
+++ b/project.html
@@ -33,6 +33,6 @@
     <footer>
         <p class="copyright">&copy; Lexie Sappington</p>
     </footer>
-    <p class="fixed">&copy; Contact me at lrs070@shsu.edu</p>
+    <p class="fixed"> Contact me at lrs070@shsu.edu</p>
 </body>
 </html>
