--- a/project.html
+++ b/project.html
@@ -31,7 +31,7 @@
         <a href="index.html">Return to Home page</a>
     </aside>
     <footer>
-        <p class="copyright">&copy; Lexie Sappington</p>
+        <p class="copyright">&copy; Lexie Sappington | <a href="https://www.shsu.edu/">SHSU</a></p>
     </footer>
     <p class="fixed"> Contact me at lrs070@shsu.edu</p>
 </body>
