--- a/menu.html
+++ b/menu.html
@@ -34,7 +34,11 @@
     </article>
     <aside>
         <ol>
-            
+            <li><a href="index.html">Introduciton</a></li>
+            <li><a href="tickets.html">Background</a></li>
+            <li><a href="members.html" >Methods</a></li>
+
+            <li><a href="about_us.html">Discussion</a></li>
         </ol>
     </aside>
 </body>
