--- a/menu.html
+++ b/menu.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Lexie Sappington's personal website">
     <meta name="keywords" content="lexie, sappington, shsu, mis, student">
     <title>Lexie Sappington's personal website</title>
-    <link rel="stylesheet" href="styles/project.css">
+    <link rel="stylesheet" href="styles/menu.css">
 </head>
 <body>
     <nav id="nav_menu">
