--- a/menu.html
+++ b/menu.html
@@ -36,7 +36,12 @@
         <ol>
             <li><a href="menu.html">Introduciton</a></li>
             <li><a href="menu.html">Background</a></li>
-            <li><a href="menu.html" >Methods</a></li>
+            <li><a href="menu.html" >Methods</a>
+                <ul>
+                    <li><a href="menu.html">Analyze</a></li>
+                    <li><a href="menu.html">Results</a></li>
+                </ul>
+            </li>
 
             <li><a href="menu.html">Discussion</a></li>
         </ol>
