--- a/menu.html
+++ b/menu.html
@@ -34,16 +34,16 @@
     </article>
     <aside>
         <ol>
-            <li><a href="menu.html">Introduciton</a></li>
-            <li><a href="menu.html">Background</a></li>
-            <li><a href="menu.html" >Methods</a>
+            <li><a href=#top>Introduciton</a></li>
+            <li><a href=#>Background</a></li>
+            <li><a href=# >Methods</a>
                 <ul>
-                    <li><a href="menu.html">Analyze</a></li>
-                    <li><a href="menu.html">Results</a></li>
+                    <li><a href=#>Analyze</a></li>
+                    <li><a href=#>Results</a></li>
                 </ul>
             </li>
 
-            <li><a href="menu.html">Discussion</a></li>
+            <li><a href=#>Discussion</a></li>
         </ol>
     </aside>
 </body>
