--- a/menu.html
+++ b/menu.html
@@ -34,7 +34,7 @@
     </article>
     <aside>
         <ol>
-            <li><a href=#top>Introduciton</a></li>
+            <li><a href=#top>Introduction</a></li>
             <li><a href=#>Background</a></li>
             <li><a href=# >Methods</a>
                 <ul>
