--- a/menu.html
+++ b/menu.html
@@ -35,7 +35,7 @@
     <aside>
         <ol>
             <li><a href=#top>Introduction</a></li>
-            <li><a href=#>Background</a></li>
+            <li><a href=#Background>Background</a></li>
             <li><a href=# >Methods</a>
                 <ul>
                     <li><a href=#>Analyze</a></li>
