--- a/menu.html
+++ b/menu.html
@@ -44,6 +44,8 @@
             </li>
 
             <li><a href=#Discussion>Discussion</a></li>
+
+            <li><a href=#top>Return to the top of the page</a></li>
         </ol>
     </aside>
 </body>
