--- a/menu.html
+++ b/menu.html
@@ -45,8 +45,8 @@
 
             <li><a href=#Discussion>Discussion</a></li>
 
-            <li><a href=#top>Return to the top of the page</a></li>
         </ol>
+        <a href=#top>Return to the top of the page</a></li>
     </aside>
 </body>
 </html>
