--- a/table.html
+++ b/table.html
@@ -63,5 +63,35 @@
             <td>Web Developer</td>
         </tr>
     </table>
+    <br></br>
+    <table class="third">
+        <caption>Table 3: IT Jobs and Salaries</caption>
+        <tr>
+            <th>Category</th>
+            <th>Job</th>
+            <th>Salary</th>
+        </tr>
+        <tr>
+            <td>1.</td>
+            <td>Support Technician</td>
+            <td>40-50k</td>
+        </tr>
+        <tr>
+            <td>2.</td>
+            <td rowspan="3">Buisness Analyst</td>
+            <td rowspan="3">50-80k</td>
+        </tr>
+        <tr>
+            <td>System Analyst</td>
+        </tr>
+        <tr>
+            <td>Data Analyst</td>
+        </tr>
+        <tr>
+            <td>3.</td>
+            <td rowspan="2">Software Developer</td>
+            <td rowspan="2">60-90k</td>
+        </tr>
+    </table>
 </body>
 </html>
