--- a/exam.html
+++ b/exam.html
@@ -42,7 +42,7 @@
             <li><a href=#Method>Methods</a>
                 <ul>
                     <li><a href=#Analysis>Analyze</a></li>
-                        <ol>  
+                        <ol type ="a">  
                             <li><a href=#Measurement>Measurement</a></li>
                             <li><a href=#Structure>Structure</a></li>
                         </ol>
