--- a/exam.html
+++ b/exam.html
@@ -37,7 +37,7 @@
     </article>
     <aside>
         <h4>References</h4>
-        <ol>
+        <ol type="I">
             <li><a href=#Introduction>Introduction</a></li>
             <li><a href=#Method>Methods</a>
                 <ul>
