--- a/exam.html
+++ b/exam.html
@@ -41,7 +41,7 @@
             <li><a href=#Introduction>Introduction</a></li>
             <li><a href=#Method>Methods</a>
                 <ul>
-                    <li><a href=#Analysis>Analysus</a></li>
+                    <li><a href=#Analysis>Analysis</a></li>
                         <ol type ="a">  
                             <li><a href=#Measurement>Measurement</a></li>
                             <li><a href=#Structure>Structure</a></li>
