--- a/exam.html
+++ b/exam.html
@@ -56,7 +56,7 @@
         <a href=#>Return to the top of the page</a>
     </aside>
     <footer>
-        <p class="copyright">&copy; Lexie Sappington | <a href="https://www.linkedin.com/in/lexie-sappington-656351306/" taget="_blank">Linkedin</a></p>
+        <p class="copyright">&copy; Lexie Sappington | <a href="https://www.linkedin.com/in/lexie-sappington-656351306/" target="_blank">Linkedin</a></p>
     </footer>
 </body>
 </html>
