--- a/table.html
+++ b/table.html
@@ -77,8 +77,8 @@
             <td>40-50k</td>
         </tr>
         <tr>
-            <td>2.</td>
-            <td rowspan="3">Buisness Analyst</td>
+            <td rowspan="3">2.</td>
+            <td>Buisness Analyst</td>
             <td rowspan="3">50-80k</td>
         </tr>
         <tr>
