--- a/table.html
+++ b/table.html
@@ -88,8 +88,8 @@
             <td>Data Analyst</td>
         </tr>
         <tr>
-            <td>3.</td>
-            <td rowspan="2">Software Developer</td>
+            <td  rowspan="2">3.</td>
+            <td>Software Developer</td>
             <td rowspan="2">60-90k</td>
         </tr>
     </table>
