--- a/form.html
+++ b/form.html
@@ -44,6 +44,16 @@
                 pattern="\d{3}[\-]\d{3}[\-]\d{4}"
                 title="Must be 999-999-999 format"
                 autocomplete="on"><br>
+                </fieldset>
+                <fieldset>
+                    <legend>Membership Information</legend>
+                    <label for="membership_type">Membership Type:</label>
+                    <select id="membership_type">
+                        <option value="junior">Junior</option>
+                        <option value="regular">Regular</option>
+                        <option value="charter">Charter</option>
+                        
+                        </select>
                 </fieldset>    
     </form>
 </body>
