--- a/rwd.html
+++ b/rwd.html
@@ -31,7 +31,7 @@
 
     </article>
     <footer>
-        <p>&copy; Lexie Sappington</p>
+        <p>&copy; Lexie Sappington | <a href="https://www.linkedin.com/in/lexie-sappington-656351306/" target="_blank">Linkedin</a></p>
     </footer>
 </body>
 </html>
