--- a/jsdemo.html
+++ b/jsdemo.html
@@ -20,5 +20,16 @@
         document.write(html2);
     </script>
 
+    <h1>The Miles Per Gallon Calculator</h1>
+    <script>
+        const height = parseFloat(prompt("Enter rectangle height"));
+        const width = parseFloat(prompt("Enter rectangle width"));
+        const area = parseFloat(height*width);
+        const html3 = `<p>Height: {height}</p>
+                    <p>Width: {width}</p>
+                    <p>Area: {area.toFixed(3)}</p>`;
+        document.write(html3);
+    </script>
+
 </body>
 </html>
