--- a/jsdemo.html
+++ b/jsdemo.html
@@ -20,7 +20,7 @@
         document.write(html2);
     </script>
 
-    <h1>The Miles Per Gallon Calculator</h1>
+    <h1>The Rectangle Area Calculator</h1>
     <script>
         const height = parseFloat(prompt("Enter rectangle height"));
         const width = parseFloat(prompt("Enter rectangle width"));
