--- a/jsdemo.html
+++ b/jsdemo.html
@@ -25,9 +25,9 @@
         const height = parseFloat(prompt("Enter rectangle height"));
         const width = parseFloat(prompt("Enter rectangle width"));
         const area = parseFloat(height*width);
-        const html3 = `<p>Height: {height}</p>
-                    <p>Width: {width}</p>
-                    <p>Area: {area.toFixed(3)}</p>`;
+        const html3 = `<p>Height: ${height}</p>
+                    <p>Width: ${width}</p>
+                    <p>Area: ${area.toFixed(3)}</p>`;
         document.write(html3);
     </script>
 
