--- a/form.html
+++ b/form.html
@@ -53,11 +53,8 @@
                         <option value="regular">Regular</option>
                         <option value="charter">Charter</option>
                         </select>
-                        <label for="starting-date">Starting Date:</label>
-                    <input type="date" id="starting-date" name="starting-date" required>
-                    
-                    <label for="tickets">Tickets:</label>
-                    <input type="number" id="tickets" name="tickets" min="1" max="4" value="2">
+                        <label for="starting_date">Starting Date:</label>
+                        <input type="date" id="starting_date" name="starting_date" required>
                 </fieldset>
                 
                 <!-- How Did You Hear About Us Fieldset -->
