--- a/form.html
+++ b/form.html
@@ -53,8 +53,13 @@
                         <option value="regular">Regular</option>
                         <option value="charter">Charter</option>
                         </select>
-                            <label for="starting_date">Starting Date:</label>
-                            <input type="date" id="starting_date" name="starting_date" required>
+
+                        <label for="starting_date">Starting Date:</label>
+                        <input type="date" id="starting_date" name="starting_date" required>
+
+                        <label for="tickets">Tickets:</label>
+                        <input type="number" id="tickets" name="tickets" min="1" max="4" value="2">
+
                 </fieldset>
                 
                 <!-- How Did You Hear About Us Fieldset -->
