--- a/form.html
+++ b/form.html
@@ -52,10 +52,10 @@
                         <option value="junior">Junior</option>
                         <option value="regular">Regular</option>
                         <option value="charter">Charter</option>
-                        </select>
+                        </select><br>
 
                         <label for="starting_date">Starting Date:</label>
-                        <input type="date" id="starting_date" name="starting_date" required>
+                        <input type="date" id="starting_date" name="starting_date" required><br>
 
                         <label for="tickets">Tickets:</label>
                         <input type="number" id="tickets" name="tickets" min="1" max="4" value="2">
