--- a/form.html
+++ b/form.html
@@ -83,7 +83,7 @@
                     <legend>Comments</legend>
                     
                     <label for="comments">Comments:</label>
-                    <textarea id="comments" name="comments"></textarea>
+                    <textarea id="comments" name="comments" placeholder="If you have any comments, please enter them here."></textarea>
                 </fieldset>
                 
                 <!-- Submit Your Membership Fieldset -->
