--- a/form.html
+++ b/form.html
@@ -88,7 +88,7 @@
                     <legend>Submit Your Membership</legend>
                     
                     <button type="submit">Submit</button>
-                
+                    <button type="reset">Reset Fields</button>
                 </fieldset>    
     </form>
 </body>
