--- a/form.html
+++ b/form.html
@@ -69,9 +69,9 @@
                 <input type="checkbox" name="social_media" id="social_media"
                 value="social_media">
                 <label for="social_media">Social media</label><br>
-                <input type="checkbox" name="email" id="email"
-                value="email">
-                <label for="email">Email</label><br>
+                <input type="checkbox" name="email1" id="email1"
+                value="email1">
+                <label for="email1">Email</label><br>
                 <input type="checkbox" name="friend_colleague" id="friend_colleague"
                 value="friend_colleague">
                 <label for="topping1">Friend or colleague</label><br>
