--- a/form.html
+++ b/form.html
@@ -74,7 +74,7 @@
                 <label for="email1">Email</label><br>
                 <input type="checkbox" name="friend_colleague" id="friend_colleague"
                 value="friend_colleague">
-                <label for="topping1">Friend or colleague</label><br>
+                <label for="friend_colleague">Friend or colleague</label><br>
 
             </fieldset>
                 
